--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
-  "engine":{
-    "node":"^16.16.0"
+  "engine": {
+    "node": "^16.16.0"
   }
 }
